# TPPOO

./: CMakeLists.txt  helpers.cpp  helpers.h  main.cpp
Objetos/: Alimento.cpp  Alimento.h  Animal.cpp  Animal.h
Objetos/Especificacao/: Categoria.cpp  Categoria.h  Comida.cpp  Comida.h  Especie.cpp  Especie.h
Visual/: Reserva.cpp  Reserva.h  Terminal.h
